# alg-zoo

./: .gitignore  pyproject.toml
.serena/: project.yml
docs/: 01_clipping_analysis.md  02_padding_experiment.md  03_dual_padding_experiment.md  04_adc_circuit_analysis.md  05_position_encoding.md  06_neuron_roles.md  07_dual_role_mechanism.md  08_interference_encoding.md  09_comparison_with_prior_work.md  10_surprise_accounting.md  11_unified_interpretation.md  12_ordering_analysis.md  13_amplitude_encoding.md  14_diagonal_boundaries.md  15_dft_oscillator.md  16_frequency_mechanism_corrected.md  17_ring_up_bell_ringing.md  18_impulse_response_analysis.md  19_complete_readout_mechanism.md  20_true_mechanism.md  21_circuit_diagram.mmd  22_n4_n2_latch.mmd  22_n4_n2_latch_circuit.md  23_simplified_circuit.mmd  24_falsifiable_predictions.md  25_round1_summary.md  26_falsifiable_predictions_r2.md  27_mechanistic_reference.md  28_falsifiable_predictions_r3.md  29_tropical_geometry.md  30_model_comparison.md  31_matroid_analysis.md  32_phase_wheel_mechanism.md  33_offset_discrimination_mechanism.md  34_fwd_rev_mechanism_explained.md  35_tropical_geometry_lens.md  35_unified_readout_mechanism.md  36_tsne_manifold_structure.md  38_mechanistic_estimate_progress.md  39_bridging_linear_tropical.md  (+10 more)
src/: __init__.py  adc_analysis.py  adjacent_impulse_analysis.py  animation_pc2_pc5.py  antiphase_analysis.py  antiphase_deep_dive.py  boundary_crossing_frequency.py  bridging_frameworks.py  canonical_D_after_second_impulse.py  clean_impulse_analysis.py  clipping_analysis.py  (+76 more)
