[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alg-zoo"
version = "0.0.1"
dependencies = [
  "torch>=2.4.1",
  "blobfile",
  "tabulate",
  "numpy>=2.2.6",
  "scikit-learn>=1.7.2",
  "matplotlib>=3.10.8",
]
requires-python = ">=3.10"
authors = [
  {name = "Alignment Research Center"}
]
description = "A model zoo of tiny RNNs and transformers trained to perform simple algorithmic tasks"
readme = "README.md"
license = "MIT-0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/alignment-research-center/alg-zoo"

[tool.setuptools]
packages = ["alg_zoo"]
